# cobramod

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .toml  CHANGELOG.md  CITATION.cff  GLS.py  GLS_test.py  LICENSE  README.md  README.rst  bigg_to_meta.txt  cobraMod.yml  creation.py  environment.yml  mypy.ini  package.json  pathways.py  pathways_test.py  pyproject.toml  rxn_bigg.txt  setup.py  testModel.xml  test_bigg.py  test_map.html  tox.ini  vite.config.js
.github/conda-build/: action.yml
.github/workflows/: docs-build-test.yml  python-verify-devel.yml  test-build-and-publish.yml  update_galata_references.yaml
docs/source/: CrossReferenz.ipynb  GLS.ipynb  README.rst  biblio.bib  cobramod.core.graph.rst  cobramod.core.pathway.rst  cobramod.core.retrieval.rst  cobramod.core.rst  cobramod.creation.rst  cobramod.debug.rst  cobramod.mod_parser.rst  cobramod.parsing.base.rst  cobramod.parsing.bigg.rst  cobramod.parsing.biocyc.rst  cobramod.parsing.rst  cobramod.pathways.rst  cobramod.rst  cobramod.test.rst  cobramod.visualization.converter.rst  cobramod.visualization.items.rst  cobramod.visualization.rst  conf.py  databases.rst  dbwalker.rst  delete.ipynb  example.rst  functional.rst  guide.ipynb  guide.rst  guides.ipynb  homoserine_cycle.ipynb  how_to.ipynb  index.rst  installation.rst  memote.ipynb  modelcuration.rst  modules.rst  settings.rst  shikimate.ipynb  test_cases.ipynb  (+1 more)
docs/source/_static/: 3d-force-example.html  custom.css  escher-example.html  memote.html  style.css  xref.html
docs/source/data/: metabolites.txt  reactions.txt
docs/source/module/: cobramod.core.creation.rst  cobramod.core.extension.rst  cobramod.core.genes.rst  cobramod.core.rst  cobramod.core.summary.rst  cobramod.error.rst  cobramod.parsing.kegg.rst  cobramod.parsing.rst  cobramod.rst  cobramod.utils.rst  cobramod.visualization.debug.rst  cobramod.visualization.mapping.rst  cobramod.visualization.pair.rst  cobramod.visualization.rst
extra/: creating_test_model.py  metaToAdd_test_model.txt  reactionsToAdd_test_model.txt  testModel.sbml  test_model.sbml
input/: metaToAdd_05_pathway_test.txt
js/: escher.js  escher.ts  flux_network.js  flux_network.ts  force_graph.ts
js/flux_network/: index.ts  rendering.ts  types.ts
src/cobramod/: __init__.py  creation.py  debug.py  error.py  extension.py  graph.py  mod_parser.py  pathway.py  pathways.py  retrieval.py  settings.py  test.py  utils.py  visualization.py
src/cobramod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cobramod/core/: __init__.py  creation.py  crossreferences.py  extension.py  genes.py  graph.py  pathway.py  retrieval.py  summary.py
src/cobramod/data/: PWEG_model.toml  biocyc_db.xml  mini_biocyc.sbml  textbook_biocyc_groups.sbml  textbook_kegg.sbml
src/cobramod/dbwalker/: BioCyc.py  DataBase.py  __init__.py  bigg.py  cache.py  chebi.py  crossreferences.py  dataclasses.py  identifiersORG.py  kegg.py  metanetx.py  modelSeed.py  pubchem.py  swisslipids.py  vsualization.py
src/cobramod/parsing/: __init__.py  base.py  bigg.py  biocyc.py  db_version.py  kegg.py  plantcyc.py  solcyc.py
src/cobramod/static/: flux_network.mjs
src/cobramod/visualization/: __init__.py  converter.py  debug.py  escher.py  items.py  (+4 more)
tests/: creation_test.py  glucosinolate_test.py  models_test.py  pathways_test.py  test_creation.py  test_crossreferences.py  test_extension.py  test_force_graph.py  test_genes.py  test_glucosinolate.py  test_graph.py  test_mod_parser.py  test_models.py  test_parser.py  test_parsing.py  test_pathway.py  test_pathways.py  test_retrieval.py  test_summary.py  test_test.py  test_utils.py  test_visualitation.py  test_visualization.py
tests/crossreferenes/: test_PubChem.py  test_validation.py
tests/data/: DatabaseVersions.csv
tests/dbwalker/: identifiersOrg.py  test_Bigg.py  test_BioCyc.py  test_ModelSeed.py  test_cache.py  test_chebi.py  test_crossreferences.py  test_kegg.py  test_metanetx.py  test_pubchem.py  test_swisslipids.py
tests/extra/: creating_test_model.py  mini_biocyc.py  mini_biocyc.sbml  reactionsToAdd_test_model.txt  rxn_mini.txt
tests/input/: metaToAdd_01_normal.txt  metaToAdd_04_pathway_p_comp_test.txt  metaToAdd_04_pathway_test.txt  metabolites_02_misspelled.txt  metabolites_03_badFormat.txt  reactions_identifiers.txt  reactions_normal.txt  rxnToAdd_01_normal.txt  test_create_replacement.txt  test_model.sbml  test_model01.sbml  test_model02.sbml  test_multi_reactions.txt  test_reading_lines.txt  test_summary.csv  test_summary.txt
tests/parsing/: test_db_version.py
tests/visualization/: escher_html_ref.html  escher_ref_map.json  test_escher.py  test_force_graph.py
ui-tests/: jupyter_server_config.py
ui-tests/tests/: cobramod-escher.test.ts
(+1297 files in other folders)
