[project]
name = "cobramod"
description="Python package for pathway-centric modification and extension of genome-scale metabolic networks"
authors = [
  { name="Stefano Camborda La Cruz", email="scambord@uni-koeln.de" },
  { name="Jan-Niklas Weder", email="jweder@uni-koeln.de" },
  { name="Nadine Töpfer", email="ntoepfer@uni-koeln.de" },
]
maintainers = [
  { name="Nadine Töpfer", email="ntoepfer@uni-koeln.de" },
] 
requires-python = ">=3.10"
dynamic = ["version", "readme"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [ "genome-scale metabolic model", "constraint-based modelling", "COBRApy", "Escher", "metabolic model curation" ]
license= {file = "LICENSE"}
dependencies = [
    "colorlog",
    "cobra>=0.29.0",
    "requests>=2.31.0",
    "tqdm>=4.62.3",
    "openpyxl>=3.1.2",
    "webcolors>=1.13",
    "pyarrow>=14.0.2"
]

[project.optional-dependencies]
escher = ["escher-legacy>=1.7.4"]

[project.urls]
homepage = "https://github.com/Toepfer-Lab/cobramod"
Documentation = "https://cobramod.readthedocs.io/"
bugtracker = "https://github.com/Toepfer-Lab/cobramod/issues"

[tool.setuptools.dynamic]
version = {attr = "cobramod.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
line-length = 80
